[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main/Level.gd" type="Script" id=1]
[ext_resource path="res://Objects/MapEdge.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Food.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Platform.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Objects/Platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Snake/Ball.tscn" type="PackedScene" id=7]
[ext_resource path="res://SlitSnake/BodySlit.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.7273, 26.5787 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Edges" type="Node2D" parent="."]
position = Vector2( 1032.02, 304.148 )
rotation = 1.5708

[node name="MapEdge" parent="Edges" instance=ExtResource( 2 )]
position = Vector2( -314.146, 519.021 )
rotation = -1.5708

[node name="MapEdge2" parent="Edges" instance=ExtResource( 2 )]
position = Vector2( 305.854, 520.019 )
rotation = -1.5708

[node name="MapEdge3" parent="Edges" instance=ExtResource( 2 )]
position = Vector2( -4.14429, 1042.02 )

[node name="MapEdge4" parent="Edges" instance=ExtResource( 2 )]
position = Vector2( -0.148041, -1.97998 )

[node name="Food" parent="." instance=ExtResource( 3 )]
position = Vector2( 426.321, 238.653 )

[node name="Platforms" type="Node2D" parent="."]

[node name="Platform" type="KinematicBody2D" parent="Platforms" groups=[
"Platform",
]]
position = Vector2( 57, 300 )
scale = Vector2( 2, 3 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform"]
position = Vector2( -17.7273, 0 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="Platforms/Platform"]
position = Vector2( -17.7372, 0 )
scale = Vector2( 0.263619, 0.8132 )
texture = ExtResource( 5 )

[node name="Position2D" type="Position2D" parent="Platforms/Platform"]
position = Vector2( -39.5, 0 )

[node name="Platform2" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 494, 619 )
rotation = 1.5708
scale = Vector2( 2, 3 )
vel_module = 1400

[node name="Platform3" type="KinematicBody2D" parent="Platforms" groups=[
"Platform",
]]
position = Vector2( 969, 300 )
rotation = 3.14159
scale = Vector2( 2, 3 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform3"]
position = Vector2( -17.7273, 0 )
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="Platforms/Platform3"]
position = Vector2( -17.7372, 0 )
scale = Vector2( 0.263619, 0.8132 )
texture = ExtResource( 5 )

[node name="Position2D" type="Position2D" parent="Platforms/Platform3"]
position = Vector2( -39.5, -7.62939e-005 )

[node name="Platform4" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 513, -19 )
rotation = -1.5708
scale = Vector2( 2, 3 )
vel_module = 1400

[node name="PhantomPlatforms" type="Node2D" parent="."]

[node name="Ball" parent="." instance=ExtResource( 7 )]
position = Vector2( 283, 175 )

[node name="BodySlit" parent="Ball" instance=ExtResource( 8 )]
show_behind_parent = true
[connection signal="food_collected" from="Food" to="." method="_on_Food_food_collected"]
